# OCD

./: .blackboxrules  .gitignore  COMPREHENSIVE_PLAN.md  Cargo.toml  PROGRESS.md  PROJECT_DOCUMENTATION.md  README.md  TESTING_REPORT.md  index.html  logs.txt  package-lock.json  package.json  tailwind.config.js  test-facial-recognition-fixed.ts  test-image-loading.js  test-page.html  vite.config.js
apps/desktop/: Cargo.toml  IMAGE_GALLERY_OPTIMIZATION_README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: sw.js  test.html
apps/desktop/src/: App.tsx  database.rs  face_embedding.rs  face_recognition.rs  main.tsx  theme.ts
apps/desktop/src-tauri/: Cargo.toml  faces.db  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: database_enhanced.rs  face_clustering.rs  face_detection.rs  face_detection_ml.rs  face_embedding_ml.rs  face_recognition.rs  intelligent_organization.rs  lib.rs  main.rs  metadata_extractor.rs  sqlite_db.rs  tests.rs  tests_comprehensive.rs
apps/desktop/src-tauri/src/database/: database_enhanced.rs  in_memory.rs
apps/desktop/src-tauri/src/metadata/: metadata_extractor.rs
apps/desktop/src-tauri/src/organization/: intelligent_organization.rs
apps/desktop/src/components/: AddedPeopleView.tsx  AnimatedBox.tsx  AppToolbar.tsx  DeviceBrowser.tsx  DeviceImportDialog.tsx  EnhancedVirtualizedImageGrid.tsx  FaceRecognitionPanel.tsx  FastImage.tsx  FileImport.tsx  FolderManagementDialog.tsx  FolderSelectionDialog.tsx  FolderView.tsx  ImageGrid.tsx  ImagePlaceholder.tsx  ImageViewerControls.tsx  ImageViewerCore.tsx  ImageViewerInfo.tsx  ImageViewerModal.tsx  ImageViewerPreviewStrip.tsx  ImageViewerZoomControls.tsx  LazyImageContainer.tsx  OptimizationSettings.tsx  OrganizedPhotoGrid.tsx  PeoplePage.tsx  PhotoGrid.tsx  ProgressiveImage.tsx  ResponsivePhotoGrid.tsx  SearchBar.tsx  Sidebar.tsx  SkeletonImageGrid.tsx  UntrackedFacesView.tsx  VirtualImageGrid.tsx
apps/desktop/src/components/dialogs/: FileImport.tsx  FolderManagementDialog.tsx  FolderSelectionDialog.tsx  FolderView.tsx  SearchBar.tsx
apps/desktop/src/components/face-recognition/: FacesPage.tsx  FamilyTreeView.tsx
apps/desktop/src/components/image-grid/: EnhancedVirtualizedImageGrid.tsx  README.md  (+2 more)
apps/desktop/src/hooks/: useAnimations.ts  useAsyncState.ts  useFaceRecognition.ts  useTouchGestures.ts  useZoom.ts
apps/desktop/src/styles/: animations.css
apps/desktop/src/utils/: advancedCache.ts  errorHandler.ts  imagePreloader.ts  imageUrlCache.ts  imageUrlUtils.ts  lenisScrollManager.ts  performanceBenchmarking.ts  performanceMetrics.ts  performanceMonitor.ts  performanceTest.ts  platform.ts  predictiveLoadingQueue.ts  previewCache.ts  previewGenerator.ts  progressiveImagePreloader.ts  scrollPreloader.ts  systemResourceManager.ts  workerManager.ts
apps/desktop/src/workers/: asyncProcessor.worker.ts  directoryScanner.worker.ts  thumbnailGenerator.worker.ts
assets/: index-BNbxRqC1.css  index-CD7X7ES0.js  index-CvDE6HlL.js  index-Nt0J5x2Y.js
context/: ._IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_PROGRESS.md
releses/: Inno-setup-OCD.iss
shared-backend/: README.md  test-facial-recognition.ts
shared-backend/core/: api.ts  face-clustering.ts  face-detection.ts  face-embedding.ts  hardware-detection.ts  model-creator.ts  onnx-inference.ts  types.ts
shared-backend/database/: schema.ts
src/: App.css  App.jsx  index.css
src/components/: Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx
(+21 files in other folders)
