[workspace]
members = [
    "apps/desktop",
    "packages/rust-service",
]
resolver = "3"

[workspace.package]
name = "ocd-monorepo"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tauri = { version = "2" }
tauri-build = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
