[package]
name = "ocd-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 image = "0.24"
 base64 = "0.22"
 rexif = "0.7"
 once_cell = "1.19"
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
