[package]
name = "ocd-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
rexif = "0.7"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
walkdir = "2.4"
ndarray = "0.15"
tract-onnx = "0.21"
tract-core = "0.21"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
linfa = "0.7"
linfa-clustering = "0.7"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
tempfile = "3.0"
ort = { version = "2.0", features = ["cuda", "tensorrt"] }
imageproc = "0.23"
rusttype = "0.9"
kamadak-exif = "0.5"
blake3 = "1.5"
serde_rusqlite = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
